# A-Maze-ing

./: .gitignore  Makefile  README.md  a.py  a_maze_ing.py  config.py  config.txt  default_config.txt  exception.py  maze.py  maze.py.orig  output.txt  parser.py  pyproject.toml  recursive_backtracker.py  resolve.py  test.py
a_maze_ing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
algorithms/: backtracking.py  eller.py
lib/mlx_CLXV/python/src/mlx/test/: mlxtest.py
mazegen.egg-info/: PKG-INFO  SOURCES.txt
src/: config.py  resolve.py
src/algorithms/: prim.py
src/mazegen/: MazeGenerator.py  __init__.py  a_maze_ing.py  config.py  exception.py  parser.py  resolve.py
src/mazegen/algorithms/: backtracking.py  eller.py  prim.py  stacking.py
src/mazegen/utils/: buttons.py  generate_utils.py  maze_utils.py  mlx_utils.py
src/utils/: generate_utils.py  maze_utils.py
tests/: entry_errors.txt  exit_errors.txt  giant_maze_backtracking_config.txt  giant_maze_eller_config.txt  giant_maze_not_square_config.txt  pair_size_errors_config.txt  tester.py
utils/: buttons.py  maze_utils.py  mlx_utils.py
